Fix for break at 768

--- a/css/general.css
+++ b/css/general.css
@@ -20,7 +20,7 @@ body {
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
     .hide-mobile {
         display: none !important;
     }
